--- a/SFSimulator.API/appsettings.Development.json
+++ b/SFSimulator.API/appsettings.Development.json
@@ -1,4 +1,5 @@
 {
+  "Target": "https://localhost:4200",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -22,5 +23,5 @@
       }
     ]
   },
-  "urls":  "https://localhost:8800"
+  "urls": "https://localhost:8800"
 }
