Adjustments of login through sftools Added snackbars for general information about common actions

--- a/SFSimulator.API/web.config
+++ b/SFSimulator.API/web.config
@@ -5,7 +5,7 @@
 			<handlers>
 				<add name="aspNetCore" path="api" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
 			</handlers>
-			<aspNetCore processPath="dotnet" arguments=".\SFSimulatorAPI.dll" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout" hostingModel="inprocess" />
+			<aspNetCore processPath="dotnet" arguments=".\SFSimulator.API.dll .\SFSimulatorAPI.dll" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout" hostingModel="inprocess" />
 		</system.webServer>
 	</location>
 	<system.webServer>
@@ -26,6 +26,13 @@
 						<add input="{HTTPS}" pattern="off" ignoreCase="true" />
 					</conditions>
 					<action type="Redirect" url="https://{HTTP_HOST}{REQUEST_URI}" redirectType="Permanent" appendQueryString="false" />
+				</rule>
+				<rule name="Redirect to non-www" stopProcessing="true">
+					<match url="(.*)" negate="false"></match>
+					<action type="Redirect" url="https://sfsimulator.xyz/{R:1}"></action>
+					<conditions>
+						<add input="{HTTP_HOST}" pattern="^sfsimulator\.xyz$" negate="true"></add>
+					</conditions>
 				</rule>
 			</rules>
 		</rewrite>
