--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build-test-deploy:
-    runs-on: windows
+    runs-on: windows-latest
 
     steps:
     - uses: actions/checkout@v3
