--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -12,6 +12,10 @@ on:
 jobs:
   build-test-deploy:
     runs-on: windows-latest
+    
+    strategy:
+      matrix:
+        node-version: [14.x, 16.x, 18.x]
 
     steps:
     - uses: actions/checkout@v3
@@ -21,13 +25,21 @@ jobs:
         dotnet-version: 6.0.x
     - name: Restore dependencies
       run: dotnet restore
-    - name: Build
-      run: dotnet build --no-restore
+    - name: Build API
+      run: dotnet build .\SFSimulator.API --no-restore
     - name: Test
       run: dotnet test --no-build --verbosity normal
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v3
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
+    - run: npm ci
+    - run: cd .\SFSimulator.Web
+    - run: ng build --output-path .\sfsimulator
+    - run: cd ..
     - name: dotnet publish 
-      run: |
-        dotnet publish -c Release -o sfsimulator .\SFSimulator.API
+      run: dotnet publish -c Release -o sfsimulator .\SFSimulator.API
         
     - name: deploy on iis
       uses: ChristopheLav/iis-deploy@v1
