--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -30,7 +30,7 @@ jobs:
         cache: 'npm'
         cache-depedency-pack: SFSimulator.Web/package-lock.json
     - run: npm ci
-    - run: ng build --output-path ..\sfsimulator
+    - run: ng build --output-path sfsimulator
     - name: dotnet publish 
       run: dotnet publish -c Release -o sfsimulator .\SFSimulator.API
         
