--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -19,8 +19,6 @@ jobs:
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 6.0.x
-    - name: Restore dependencies
-      run: dotnet restore
     - name: Build API
       run: dotnet build .\SFSimulator.API --no-restore
     - name: Use Node.js ${{ matrix.node-version }}
@@ -29,12 +27,14 @@ jobs:
         node-version: 14.x
         cache: 'npm'
         cache-dependency-path: SFSimulator.Web/package-lock.json
-    - run: echo %cd%
-    - run: dir
-    - run: cd SFSimulator.Web
-    - run: dir
-    - run: npm ci
-    - run: ng build --output-path ..\sfsimulator
+    - run: |
+        cd SFSimulator.Web
+        dir
+        npm ci
+    - run: |
+        cd SFSimulator.Web
+        dir
+        ng build --output-path ..\sfsimulator
     - run: cd ..
     - name: dotnet publish 
       run: dotnet publish -c Release -o sfsimulator .\SFSimulator.API
