--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -28,7 +28,7 @@ jobs:
     - run: |
         cd SFSimulator.Web
         dir
-        npm ci
+        npm install
     - run: |
         cd SFSimulator.Web
         dir
