--- a/SFSimulator.Web/package.json
+++ b/SFSimulator.Web/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^15.1.4",
     "@types/jasmine": "^4.3.1",
     "chart.js": "^4.2.1",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "globby": "^13.1.3",
     "jest-editor-support": "*",
     "jquery": "^3.6.4",
