--- a/SFSimulator.Web/package.json
+++ b/SFSimulator.Web/package.json
@@ -29,6 +29,7 @@
     "jquery": "^3.6.4",
     "ng2-charts": "^4.1.1",
     "ngx-cookie-service": "^16.0.0",
+    "primeng": "^16.0.0-rc.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.5.0",
     "zone.js": "~0.12.0"
