New schedule system for own events and actions New option for amount of daily spins New option for amount of guard hours Added patch notes system Added new website icon Gold Pit level is no longer raised automatically every 15 days Bugfix: Character without tower unlocked had -1 value in tower field Bugfix: Bonus quest were not generated if drink beer one by one wasn't selected Bugfix: Current day tooltip when looking at daily chart was not visible

--- a/SFSimulator.API/web.config
+++ b/SFSimulator.API/web.config
@@ -5,7 +5,7 @@
 			<handlers>
 				<add name="aspNetCore" path="api" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
 			</handlers>
-			<aspNetCore processPath="dotnet" arguments=".\SFSimulator.API.dll .\SFSimulatorAPI.dll" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout" hostingModel="inprocess" />
+			<aspNetCore processPath="dotnet" arguments=".\SFSimulator.API.dll .\SFSimulator.API.dll .\SFSimulatorAPI.dll" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout" hostingModel="inprocess" />
 		</system.webServer>
 	</location>
 	<system.webServer>
@@ -33,6 +33,18 @@
 					<conditions>
 						<add input="{HTTP_HOST}" pattern="^sfsimulator\.xyz$" negate="true"></add>
 					</conditions>
+				</rule>
+				<rule name="Ignore API route" stopProcessing="true">
+					<match url="^api/" />
+					<action type="None" />
+				</rule>
+				<rule name="Angular Routes" stopProcessing="true">
+					<match url=".*" />
+					<conditions logicalGrouping="MatchAll">
+						<add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
+						<add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
+					</conditions>
+					<action type="Rewrite" url="/" />
 				</rule>
 			</rules>
 		</rewrite>
