--- a/SFSimulator.Web/package.json
+++ b/SFSimulator.Web/package.json
@@ -28,7 +28,7 @@
     "jest-editor-support": "*",
     "jquery": "^3.6.4",
     "ng2-charts": "^4.1.1",
-    "primeng": "^16.0.0-rc.2",
+    "primeng": "^17.12.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.5.0",
     "zone.js": "~0.14.2"
