--- a/SFSimulator.API/appsettings.Development.json
+++ b/SFSimulator.API/appsettings.Development.json
@@ -11,8 +11,13 @@
     "targets": {
       "error": {
         "type": "File",
-        "fileName": "c:\\temp\\nlog-all-${shortdate}.log",
+        "fileName": "c:/temp/nlog-error-${shortdate}.log",
         "layout": "${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${logger}|${message} ${exception:format=tostring}"
+      },
+      "info": {
+        "type": "File",
+        "fileName": "c:/temp/nlog-info-${shortdate}.log",
+        "layout": "${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${logger}|${message}"
       }
     },
     "rules": [
@@ -20,6 +25,11 @@
         "logger": "*",
         "minLevel": "Error",
         "writeTo": "error"
+      },
+      {
+        "logger": "*",
+        "minLevel": "Info",
+        "writeTo": "info"
       }
     ]
   },
