--- a/SFSimulator.API/appsettings.json
+++ b/SFSimulator.API/appsettings.json
@@ -12,8 +12,13 @@
     "targets": {
       "error": {
         "type": "File",
-        "fileName": "${currentdir:cached=true}\\log\\exceptions-${shortdate}.log",
+        "fileName": "${basedir}/logs/errors/exceptions-${shortdate}.log",
         "layout": "${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${logger}|${message} ${exception:format=tostring}"
+      },
+      "info": {
+        "type": "File",
+        "fileName": "${basedir}/logs/info/info-${shortdate}.log",
+        "layout": "${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${logger}|${message}"
       }
     },
     "rules": [
@@ -21,6 +26,11 @@
         "logger": "*",
         "minLevel": "Error",
         "writeTo": "error"
+      },
+      {
+        "logger": "*",
+        "minLevel": "Info",
+        "writeTo": "info"
       }
     ]
   }
