Added more validation for simulate request Added QoL features for form validation Adjusted tests for expeditions Added swagger generation for future API codegen Moved options for quests to new QuestOptions record Adjusted config saving to now include everything

--- a/SFSimulator.API/appsettings.Development.json
+++ b/SFSimulator.API/appsettings.Development.json
@@ -18,6 +18,10 @@
         "type": "File",
         "fileName": "c:/temp/nlog-info-${shortdate}.log",
         "layout": "${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${logger}|${message}"
+      },
+      "console": {
+        "type": "Console"
+        
       }
     },
     "rules": [
@@ -30,6 +34,11 @@
         "logger": "*",
         "minLevel": "Info",
         "writeTo": "info"
+      },
+      {
+        "logger": "*",
+        "minLevel": "Trace",
+        "writeTo": "console"
       }
     ]
   },
