--- a/SFSimulator.API/web.config
+++ b/SFSimulator.API/web.config
@@ -34,6 +34,10 @@
 						<add input="{HTTP_HOST}" pattern="^sfsimulator\.xyz$" negate="true"></add>
 					</conditions>
 				</rule>
+				<rule name="Ignore Swagger route" stopProcessing="true">
+					<match url="^swagger/" />
+					<action type="None" />
+				</rule>
 				<rule name="Ignore API route" stopProcessing="true">
 					<match url="^api/" />
 					<action type="None" />
