--- a/SFSimulator.Web/package.json
+++ b/SFSimulator.Web/package.json
@@ -7,7 +7,8 @@
     "build": "ng build --output-path ../sfsimulator",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "prestart": "node aspnetcore-https"
+    "prestart": "node aspnetcore-https",
+    "prepare": "ts-patch install && typia patch"
   },
   "private": true,
   "dependencies": {
@@ -30,7 +31,9 @@
     "ng2-charts": "^4.1.1",
     "primeng": "^17.12.0",
     "rxjs": "~7.8.0",
+    "swagger-typescript-api": "^13.0.3",
     "tslib": "^2.5.0",
+    "typia": "^6.0.3",
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
@@ -45,6 +48,8 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "ts-node": "^10.9.2",
+    "ts-patch": "^3.1.2",
     "typescript": "~5.2.2"
   }
 }
