Added static expedition assets

--- a/SFSimulator.API/SFSimulator.API.csproj
+++ b/SFSimulator.API/SFSimulator.API.csproj
@@ -20,4 +20,8 @@
   <ItemGroup>
     <ProjectReference Include="..\SFSimulator.Core\SFSimulator.Core.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
 </Project>
