--- a/SFSimulator.API/web.config
+++ b/SFSimulator.API/web.config
@@ -42,6 +42,10 @@
 					<match url="^api/" />
 					<action type="None" />
 				</rule>
+				<rule name="Ignore Expedition route" stopProcessing="true">
+					<match url="^expeditions/" />
+					<action type="None" />
+				</rule>
 				<rule name="Angular Routes" stopProcessing="true">
 					<match url=".*" />
 					<conditions logicalGrouping="MatchAll">
