Added manual page Updated depedencies Disabled dungeon and context logging for release

--- a/SFSimulator.Frontend/SFSimulator.Frontend.csproj
+++ b/SFSimulator.Frontend/SFSimulator.Frontend.csproj
@@ -20,6 +20,10 @@
     <ProjectReference Include="..\SFSimulator.Core\SFSimulator.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\manual\" />
+  </ItemGroup>
+
   <PropertyGroup>
     <BlazorCacheBootResources>false</BlazorCacheBootResources>
   </PropertyGroup>
