Added missing csproj update

--- a/SFSimulator.Frontend/SFSimulator.Frontend.csproj
+++ b/SFSimulator.Frontend/SFSimulator.Frontend.csproj
@@ -23,6 +23,7 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\manual\" />
+    <Folder Include="wwwroot\external\" />
   </ItemGroup>
 
   <PropertyGroup>
