Turned off blazor boot resources caching

--- a/SFSimulator.Frontend/SFSimulator.Frontend.csproj
+++ b/SFSimulator.Frontend/SFSimulator.Frontend.csproj
@@ -25,4 +25,8 @@
     <Folder Include="wwwroot\manual\" />
     <Folder Include="wwwroot\external\" />
   </ItemGroup>
+
+  <PropertyGroup>
+    <BlazorCacheBootResources>false</BlazorCacheBootResources>
+  </PropertyGroup>
 </Project>
