Improved various class fight contexts Improved test suite for dungeon simulation

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -20,6 +20,8 @@ jobs:
     - name: dotnet publish 
       run: |
           dotnet publish -c Release -o sfsimulator .\SFSimulator.Frontend
+    - name: show workload
+      run: |
           dotnet workload list
     - name: deploy on iis
       uses: ChristopheLav/iis-deploy@v1
