--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,6 +1,3 @@
-# This workflow will build a .NET project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
-
 name: dotnet iis
 
 on:
@@ -19,8 +16,8 @@ jobs:
         dotnet-version: 9.0.x
     - name: dotnet publish 
       run: |
+          dotnet publish -c Release -o sfsimulator .\SFSimulator.Api
           dotnet publish -c Release -o sfsimulator .\SFSimulator.Frontend
-          dotnet publish -c Release -o sfsimulator\api .\SFSimulator.Api
     - name: show workload
       run: |
           dotnet workload list
