--- a/SFSimulator.Frontend/web.config
+++ b/SFSimulator.Frontend/web.config
@@ -1,53 +1,114 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <configuration>
-	<system.webServer>
-		<handlers>
-			<add name="aspNetCore" path="api/*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
-		</handlers>
-		<aspNetCore processPath="dotnet" arguments=".\SFSimulator.Api.dll" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout" hostingModel="inprocess" />
-		<staticContent>
-			<remove fileExtension=".blat" />
-			<remove fileExtension=".dat" />
-			<remove fileExtension=".dll" />
-			<remove fileExtension=".webcil" />
-			<remove fileExtension=".json" />
-			<remove fileExtension=".wasm" />
-			<remove fileExtension=".woff" />
-			<remove fileExtension=".woff2" />
-			<mimeMap fileExtension=".blat" mimeType="application/octet-stream" />
-			<mimeMap fileExtension=".dll" mimeType="application/octet-stream" />
-			<mimeMap fileExtension=".webcil" mimeType="application/octet-stream" />
-			<mimeMap fileExtension=".dat" mimeType="application/octet-stream" />
-			<mimeMap fileExtension=".json" mimeType="application/json" />
-			<mimeMap fileExtension=".wasm" mimeType="application/wasm" />
-			<mimeMap fileExtension=".woff" mimeType="application/font-woff" />
-			<mimeMap fileExtension=".woff2" mimeType="application/font-woff" />
-		</staticContent>
-		<httpCompression>
-			<dynamicTypes>
-				<add mimeType="application/octet-stream" enabled="true" />
-				<add mimeType="application/wasm" enabled="true" />
-			</dynamicTypes>
-		</httpCompression>
-		<rewrite>
-			<rules>
-				<rule name="Ignore API route" patternSyntax="ECMAScript" stopProcessing="true">
-				  <match url="^api(/.*)?$" ignoreCase="true" negate="false" />
-				  <conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
-				  <action type="None" />
-				</rule>
-				<rule name="Serve subdir">
-					<match url=".*" />
-					<action type="Rewrite" url="wwwroot\{R:0}" />
-				</rule>
-				<rule name="SPA fallback routing" stopProcessing="true">
-					<match url=".*" />
-					<conditions logicalGrouping="MatchAll">
-						<add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
-					</conditions>
-					<action type="Rewrite" url="wwwroot\" />
-				</rule>
-			</rules>
-		</rewrite>
-	</system.webServer>
+  <system.webServer>
+    <staticContent>
+      <remove fileExtension=".dll" />
+      <remove fileExtension=".json" />
+      <remove fileExtension=".woff" />
+      <remove fileExtension=".woff2" />
+      <remove fileExtension=".wasm" />
+      <mimeMap fileExtension=".json" mimeType="application/json" />
+      <mimeMap fileExtension=".woff" mimeType="font/woff" />
+      <mimeMap fileExtension=".woff2" mimeType="font/woff2" />
+      <mimeMap fileExtension=".dat" mimeType="application/octet-stream" />
+      <mimeMap fileExtension=".dll" mimeType="application/octet-stream" />
+      <mimeMap fileExtension=".wasm" mimeType="application/wasm" />
+      <mimeMap fileExtension=".blat" mimeType="application/octet-stream" />
+      <mimeMap fileExtension=".js.gz" mimeType="application/javascript" />
+      <mimeMap fileExtension=".dat.gz" mimeType="application/octet-stream" />
+      <mimeMap fileExtension=".dll.gz" mimeType="application/octet-stream" />
+      <mimeMap fileExtension=".json.gz" mimeType="application/json" />
+      <mimeMap fileExtension=".wasm.gz" mimeType="application/wasm" />
+      <mimeMap fileExtension=".blat.gz" mimeType="application/octet-stream" />
+      <mimeMap fileExtension=".html.gz" mimeType="text/html" />
+      <mimeMap fileExtension=".css.gz" mimeType="text/css" />
+      <mimeMap fileExtension=".ico.gz" mimeType="image/x-icon" />
+      <mimeMap fileExtension=".svg.gz" mimeType="image/svg+xml" />
+      <mimeMap fileExtension=".js.br" mimeType="application/javascript" />
+      <mimeMap fileExtension=".dat.br" mimeType="application/octet-stream" />
+      <mimeMap fileExtension=".dll.br" mimeType="application/octet-stream" />
+      <mimeMap fileExtension=".json.br" mimeType="application/json" />
+      <mimeMap fileExtension=".wasm.br" mimeType="application/wasm" />
+      <mimeMap fileExtension=".blat.br" mimeType="application/octet-stream" />
+      <mimeMap fileExtension=".html.br" mimeType="text/html" />
+      <mimeMap fileExtension=".css.br" mimeType="text/css" />
+      <mimeMap fileExtension=".ico.br" mimeType="image/x-icon" />
+      <mimeMap fileExtension=".svg.br" mimeType="image/svg+xml" />
+    </staticContent>
+    <httpCompression>
+      <dynamicTypes>
+        <remove mimeType="text/*" />
+        <remove mimeType="application/javascript" />
+        <remove mimeType="image/svg+xml" />
+      </dynamicTypes>
+      <staticTypes>
+        <remove mimeType="text/*" />
+        <remove mimeType="application/javascript" />
+        <remove mimeType="image/svg+xml" />
+      </staticTypes>
+    </httpCompression>
+    <rewrite>
+      <outboundRules rewriteBeforeCache="true">
+        <rule name="Add Vary Accept-Encoding" preCondition="PreCompressedFile" enabled="true">
+          <match serverVariable="RESPONSE_Vary" pattern=".*" />
+          <action type="Rewrite" value="Accept-Encoding" />
+        </rule>
+        <rule name="Add Encoding Brotli" preCondition="PreCompressedBrotli" enabled="true" stopProcessing="true">
+          <match serverVariable="RESPONSE_Content_Encoding" pattern=".*" />
+          <action type="Rewrite" value="br" />
+        </rule>
+        <rule name="Add Encoding Gzip" preCondition="PreCompressedGzip" enabled="true" stopProcessing="true">
+          <match serverVariable="RESPONSE_Content_Encoding" pattern=".*" />
+          <action type="Rewrite" value="gzip" />
+        </rule>
+        <preConditions>
+          <preCondition name="PreCompressedFile">
+            <add input="{URL}" pattern="\.(gz|br)$" />
+          </preCondition>
+            <preCondition name="PreCompressedBrotli">
+            <add input="{URL}" pattern="\.br$" />
+          </preCondition>
+          <preCondition name="PreCompressedGzip">
+            <add input="{URL}" pattern="\.gz$" />
+          </preCondition>
+        </preConditions>
+      </outboundRules>
+      <rules>
+		<rule name="Ignore API route" patternSyntax="ECMAScript" stopProcessing="true">
+		  <match url="^api(/.*)?$" ignoreCase="true" negate="false" />
+		  <conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
+		  <action type="None" />
+		</rule>
+        <rule name="Serve subdir">
+          <match url=".*" />
+          <action type="Rewrite" url="wwwroot\{R:0}" />
+        </rule>
+        <rule name="Rewrite brotli file" stopProcessing="true">
+          <match url="(.*)"/>
+          <conditions>
+            <add input="{HTTP_ACCEPT_ENCODING}" pattern="br" />
+            <add input="{REQUEST_FILENAME}" pattern="\.(js|dat|dll|json|wasm|blat|htm|html|css|ico|svg)$" />
+            <add input="{REQUEST_FILENAME}.br" matchType="IsFile" />
+          </conditions>
+          <action type="Rewrite" url="{R:1}.br" />
+        </rule>
+        <rule name="Rewrite gzip file" stopProcessing="true">
+          <match url="(.*)"/>
+          <conditions>
+            <add input="{HTTP_ACCEPT_ENCODING}" pattern="gzip" />
+            <add input="{REQUEST_FILENAME}" pattern="\.(js|dat|dll|json|wasm|blat|htm|html|css|ico|svg)$" />
+            <add input="{REQUEST_FILENAME}.gz" matchType="IsFile" />
+          </conditions>
+          <action type="Rewrite" url="{R:1}.gz" />
+        </rule>
+        <rule name="SPA fallback routing" stopProcessing="true">
+          <match url=".*" />
+          <conditions logicalGrouping="MatchAll">
+            <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
+          </conditions>
+          <action type="Rewrite" url="wwwroot\" />
+        </rule>
+      </rules>
+    </rewrite>
+  </system.webServer>
 </configuration>
