--- a/SFSimulator.Frontend/web.config
+++ b/SFSimulator.Frontend/web.config
@@ -74,11 +74,11 @@
         </preConditions>
       </outboundRules>
       <rules>
-		<rule name="Ignore API route" patternSyntax="ECMAScript" stopProcessing="true">
-		  <match url="^api(/.*)?$" ignoreCase="true" negate="false" />
-		  <conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
-		  <action type="None" />
-		</rule>
+      <rule name="Ignore API route" patternSyntax="ECMAScript" stopProcessing="true">
+        <match url="^api(/.*)?$" ignoreCase="true" negate="false" />
+        <conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
+        <action type="None" />
+      </rule>
         <rule name="Serve subdir">
           <match url=".*" />
           <action type="Rewrite" url="wwwroot\{R:0}" />
@@ -110,5 +110,6 @@
         </rule>
       </rules>
     </rewrite>
+    <urlCompression doStaticCompression="false" doDynamicCompression="false" />
   </system.webServer>
 </configuration>
