Removed web.config from api project being published

--- a/SFSimulator.Api/SFSimulator.Api.csproj
+++ b/SFSimulator.Api/SFSimulator.Api.csproj
@@ -6,6 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <InvariantGlobalization>true</InvariantGlobalization>
     <PublishAot>false</PublishAot>
+    <IsTransformWebConfigDisabled>true</IsTransformWebConfigDisabled>
+    <PublishIISAssets>false</PublishIISAssets>
   </PropertyGroup>
 
   <ItemGroup>
