Added charts for level and base stats progression Changed initial loading asset

--- a/SFSimulator.Frontend/web.config
+++ b/SFSimulator.Frontend/web.config
@@ -74,11 +74,11 @@
         </preConditions>
       </outboundRules>
       <rules>
-      <rule name="Ignore API route" patternSyntax="ECMAScript" stopProcessing="true">
-        <match url="^api(/.*)?$" ignoreCase="true" negate="false" />
-        <conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
-        <action type="None" />
-      </rule>
+        <rule name="Ignore API route" patternSyntax="ECMAScript" stopProcessing="true">
+	      <match url="^api(/.*)?$" ignoreCase="true" negate="false" />
+		  <conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
+		  <action type="None" />
+	    </rule>
         <rule name="Serve subdir">
           <match url=".*" />
           <action type="Rewrite" url="wwwroot\{R:0}" />
@@ -111,5 +111,9 @@
       </rules>
     </rewrite>
     <urlCompression doStaticCompression="false" doDynamicCompression="false" />
+    <handlers>
+	  <add name="aspNetCore" path="api/*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
+    </handlers>
+    <aspNetCore processPath="dotnet" arguments=".\SFSimulator.Api.dll" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout" hostingModel="inprocess" />
   </system.webServer>
 </configuration>
