--- a/SFSimulator.Frontend/SFSimulator.Frontend.csproj
+++ b/SFSimulator.Frontend/SFSimulator.Frontend.csproj
@@ -9,14 +9,23 @@
     <IsTransformWebConfigDisabled>true</IsTransformWebConfigDisabled>
     <PublishIISAssets>true</PublishIISAssets>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)' == 'Release'">
+	<SentryOrg>ernest-koguc</SentryOrg>
+	<SentryProject>sf-simulator</SentryProject>
+	<SentryUploadSymbols>true</SentryUploadSymbols>
+	<SentryUploadSources>true</SentryUploadSources>
+	<SentryCreateRelease>true</SentryCreateRelease>
+	<SentrySetCommits>true</SentrySetCommits>
+  </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="12.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="9.0.8" PrivateAssets="all" />
-    <PackageReference Include="Radzen.Blazor" Version="7.3.2" />
-    <PackageReference Include="SpawnDev.BlazorJS" Version="2.26.0" />
-    <PackageReference Include="SpawnDev.BlazorJS.WebWorkers" Version="2.18.0" />
+    <PackageReference Include="Radzen.Blazor" Version="7.3.3" />
+    <PackageReference Include="Sentry.AspNetCore.Blazor.WebAssembly" Version="5.14.1" />
+    <PackageReference Include="SpawnDev.BlazorJS" Version="2.29.0" />
+    <PackageReference Include="SpawnDev.BlazorJS.WebWorkers" Version="2.19.0" />
   </ItemGroup>
 
   <ItemGroup>
