Updated meta tags Added robots.txt and sitemap.xml files for SEO

--- a/SFSimulator.Frontend/SFSimulator.Frontend.csproj
+++ b/SFSimulator.Frontend/SFSimulator.Frontend.csproj
@@ -38,7 +38,16 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="wwwroot\robots.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Update="web.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Update="wwwroot\sitemap.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
