--- a/SFSimulator.Frontend/SFSimulator.Frontend.csproj
+++ b/SFSimulator.Frontend/SFSimulator.Frontend.csproj
@@ -22,6 +22,7 @@
     <PackageReference Include="FluentValidation" Version="12.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="9.0.8" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.9" />
     <PackageReference Include="Radzen.Blazor" Version="7.3.3" />
     <PackageReference Include="Sentry.AspNetCore.Blazor.WebAssembly" Version="5.14.1" />
     <PackageReference Include="SpawnDev.BlazorJS" Version="2.29.0" />
